==> LuckyE993/BadApple/Hardware/OLED/oled.c <==
#include "oled.h"
#include "stdlib.h"
#include "oledfont.h"
#include "bsp_systick.h"
#define  delay_ms  delay_1ms

void OLED_WR_Byte(u8 dat,u8 cmd)
{	
	//u8 i;			  
	if(cmd)
	  OLED_DC_Set();
	else
	  OLED_DC_Clr();
	
#if USE_SOFTWARE
	OLED_CS_Clr();
	for(i=0;i<8;i++)
	{
		OLED_SCL_Clr();
		if(dat&0x80)
		   OLED_SDA_Set();
		else 
		   OLED_SDA_Clr();
		OLED_SCL_Set();
		dat<<=1;   
	}				 		  
	OLED_CS_Set();      
#else
    
	OLED_CS_Clr();
	while(RESET == spi_i2s_flag_get(PORT_SPI, SPI_FLAG_TBE));
        spi_i2s_data_transmit(PORT_SPI, dat);
	while(RESET == spi_i2s_flag_get(PORT_SPI, SPI_FLAG_RBNE));
        spi_i2s_data_receive(PORT_SPI);									
	OLED_CS_Set(); 
#endif
    
	OLED_DC_Set();   	  
}

void OLED_Init(void)
{
	spi_parameter_struct spi_init_struct={0};
		/* 开启各引脚时钟 */
	rcu_periph_clock_enable(RCU_LCD_D0);
	rcu_periph_clock_enable(RCU_LCD_D1);
	rcu_periph_clock_enable(RCU_LCD_CS);
	rcu_periph_clock_enable(RCU_LCD_DC);
	rcu_periph_clock_enable(RCU_LCD_RES);

		 /* 配置DC */
	gpio_mode_set(PORT_LCD_DC,GPIO_MODE_OUTPUT,GPIO_PUPD_PULLUP,GPIO_LCD_DC);
	gpio_output_options_set(PORT_LCD_DC,GPIO_OTYPE_PP,GPIO_OSPEED_50MHZ,GPIO_LCD_DC);
	gpio_bit_write(PORT_LCD_DC, GPIO_LCD_DC, SET);
		 /* 配置RES */
	gpio_mode_set(PORT_LCD_RES,GPIO_MODE_OUTPUT,GPIO_PUPD_PULLUP,GPIO_LCD_RES);
	gpio_output_options_set(PORT_LCD_RES,GPIO_OTYPE_PP,GPIO_OSPEED_50MHZ,GPIO_LCD_RES);
	gpio_bit_write(PORT_LCD_RES, GPIO_LCD_RES, SET);
		 /* 配置CS */
	gpio_mode_set(PORT_LCD_CS,GPIO_MODE_OUTPUT,GPIO_PUPD_NONE,GPIO_LCD_CS);
	gpio_output_options_set(PORT_LCD_CS,GPIO_OTYPE_PP,GPIO_OSPEED_50MHZ,GPIO_LCD_CS);
	gpio_bit_write(PORT_LCD_CS, GPIO_LCD_CS, SET); 
    
#if USE_SOFTWARE
        /* 配置D0 */
    gpio_mode_set(PORT_LCD_D0,GPIO_MODE_OUTPUT,GPIO_PUPD_PULLUP,GPIO_LCD_D0);
    gpio_output_options_set(PORT_LCD_D0,GPIO_OTYPE_PP,GPIO_OSPEED_50MHZ,GPIO_LCD_D0);
    gpio_bit_write(PORT_LCD_D0, GPIO_LCD_D0, SET);
    
        /* 配置D1 */
    gpio_mode_set(PORT_LCD_D1,GPIO_MODE_OUTPUT,GPIO_PUPD_PULLUP,GPIO_LCD_D1);
    gpio_output_options_set(PORT_LCD_D1,GPIO_OTYPE_PP,GPIO_OSPEED_50MHZ,GPIO_LCD_D1);
    gpio_bit_write(PORT_LCD_D1, GPIO_LCD_D1, SET);
#else    
    
	/* 配置 SPI的SCK GPIO */
	gpio_af_set(PORT_LCD_D0, LINE_AF_SPI, GPIO_LCD_D0);
	gpio_mode_set(PORT_LCD_D0, GPIO_MODE_AF, GPIO_PUPD_NONE, GPIO_LCD_D0);
	gpio_output_options_set(PORT_LCD_D0, GPIO_OTYPE_PP, GPIO_OSPEED_50MHZ, GPIO_LCD_D0);
	gpio_bit_set(PORT_LCD_D0,GPIO_LCD_D0);
	/* 配置 SPI的MOSI  GPIO */
	gpio_af_set(PORT_LCD_D1, LINE_AF_SPI, GPIO_LCD_D1);
	gpio_mode_set(PORT_LCD_D1, GPIO_MODE_AF, GPIO_PUPD_NONE, GPIO_LCD_D1);
	gpio_output_options_set(PORT_LCD_D1, GPIO_OTYPE_PP, GPIO_OSPEED_50MHZ, GPIO_LCD_D1);
	gpio_bit_set(PORT_LCD_D1, GPIO_LCD_D1);         
    
	/* 使能SPI时钟 */
	rcu_periph_clock_enable(RCU_SPI_HARDWARE); 
	/* 配置 SPI 参数 */
	spi_init_struct.trans_mode           = SPI_TRANSMODE_FULLDUPLEX;  // 传输模式全双工
	spi_init_struct.device_mode          = SPI_MASTER;   // 配置为主机
	spi_init_struct.frame_size           = SPI_FRAMESIZE_8BIT; // 8位数据
	spi_init_struct.clock_polarity_phase = SPI_CK_PL_HIGH_PH_2EDGE;
	spi_init_struct.nss                  = SPI_NSS_SOFT;  // 软件cs
	spi_init_struct.prescale             = SPI_PSC_2;//2分频
	spi_init_struct.endian               = SPI_ENDIAN_MSB;
	spi_init(PORT_SPI, &spi_init_struct);
	/* 使能 SPI */
	spi_enable(PORT_SPI);
#endif

	OLED_RES_Clr();
	delay_ms(200);
	OLED_RES_Set();
	
	OLED_WR_Byte(0xAE,OLED_CMD);//--turn off oled panel
	OLED_WR_Byte(0x00,OLED_CMD);//---set low column address
	OLED_WR_Byte(0x10,OLED_CMD);//---set high column address
	OLED_WR_Byte(0x40,OLED_CMD);//--set start line address  Set Mapping RAM Display Start Line (0x00~0x3F)
	OLED_WR_Byte(0x81,OLED_CMD);//--set contrast control register
	OLED_WR_Byte(0xCF,OLED_CMD);// Set SEG Output Current Brightness
	OLED_WR_Byte(0xA1,OLED_CMD);//--Set SEG/Column Mapping     0xa0左右反置 0xa1正常
	OLED_WR_Byte(0xC8,OLED_CMD);//Set COM/Row Scan Direction   0xc0上下反置 0xc8正常
	OLED_WR_Byte(0xA6,OLED_CMD);//--set normal display
	OLED_WR_Byte(0xA8,OLED_CMD);//--set multiplex ratio(1 to 64)
	OLED_WR_Byte(0x3f,OLED_CMD);//--1/64 duty
	OLED_WR_Byte(0xD3,OLED_CMD);//-set display offset	Shift Mapping RAM Counter (0x00~0x3F)
	OLED_WR_Byte(0x00,OLED_CMD);//-not offset
	OLED_WR_Byte(0xd5,OLED_CMD);//--set display clock divide ratio/oscillator frequency
	OLED_WR_Byte(0x80,OLED_CMD);//--set divide ratio, Set Clock as 100 Frames/Sec
	OLED_WR_Byte(0xD9,OLED_CMD);//--set pre-charge period
	OLED_WR_Byte(0xF1,OLED_CMD);//Set Pre-Charge as 15 Clocks & Discharge as 1 Clock
	OLED_WR_Byte(0xDA,OLED_CMD);//--set com pins hardware configuration
	OLED_WR_Byte(0x12,OLED_CMD);
	OLED_WR_Byte(0xDB,OLED_CMD);//--set vcomh
	OLED_WR_Byte(0x40,OLED_CMD);//Set VCOM Deselect Level
	OLED_WR_Byte(0x20,OLED_CMD);//-Set Page Addressing Mode (0x00/0x01/0x02)
	OLED_WR_Byte(0x02,OLED_CMD);//
	OLED_WR_Byte(0x8D,OLED_CMD);//--set Charge Pump enable/disable
	OLED_WR_Byte(0x14,OLED_CMD);//--set(0x10) disable
	OLED_WR_Byte(0xA4,OLED_CMD);// Disable Entire Display On (0xa4/0xa5)
	OLED_WR_Byte(0xA6,OLED_CMD);// Disable Inverse Display On (0xa6/a7) 
	OLED_Clear();
	OLED_WR_Byte(0xAF,OLED_CMD);
}
